<resources>
    <string name="app_name">CIS3334_Project1</string>
    <string name="enter_your_stats">Enter Your Stats</string>
    <string name="fta">FTA:</string>
    <string name="ftm">FTM:</string>
    <string name="calculate_averages">Calculate Averages</string>
    <string name="add_game">Add Game</string>
    <string name="_3pa">3PA:</string>
    <string name="points">Points:</string>
    <string name="assists">Assists:</string>
    <string name="blocks">Blocks:</string>
    <string name="fga">FGA:</string>
    <string name="rebounds">Rebounds:</string>
    <string name="steals">Steals:</string>
    <string name="fgm">FGM:</string>
    <string name="_3pm">3PM:</string>
    <string name="your_averages">Your Averages</string>
    <string name="pointsAveragesText">Points</string>
    <string name="reboundsAveragesText">Rebounds:</string>
    <string name="assistsAveragesText">Assists:</string>
    <string name="stealsAveragesText">Steals:</string>
    <string name="stealsAverage">0.00</string>
    <string name="blocksAveragesText">Blocks:</string>
    <string name="fgAveragesText">FG%:</string>
    <string name="fgAverage">0%</string>
    <string name="_3pAveragesText">3P%:</string>
    <string name="_3pAverage">0%</string>
    <string name="ftAveragesText">FT%:</string>
    <string name="ftAverage">0%</string>
    <string name="blocksAverage">0.00</string>
    <string name="assistsAverage">0.00</string>
    <string name="reboundsAverage">0.00</string>
    <string name="pointsAverage">0.00</string>
    <string name="done">Done</string>
    <string name="game">Game #:</string>
    <string name="gamePoints">Points:</string>
    <string name="gameRebounds">Rebounds:</string>
    <string name="gameAssists">Assists:</string>
    <string name="gameSteals">Steals:</string>
    <string name="gameStealsTotal">0</string>
    <string name="gameAssistsTotal">0</string>
    <string name="gameReboundsTotal">0</string>
    <string name="gamePointsTotal">0</string>
    <string name="gameBlocks">Blocks:</string>
    <string name="gameBlocksTotal">0</string>
    <string name="gameFG">FG%:</string>
    <string name="gameFgTotal">0%</string>
    <string name="game3p">3P%:</string>
    <string name="game3pTotal">0%</string>
    <string name="gameFt">FT%:</string>
    <string name="gameFtTotal">0%</string>
</resources>